--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
   <title>Extract Exif and place the photo in the Map</title>
   <script src="https://api.mapbox.com/mapbox.js/v2.2.2/mapbox.js"></script>
   <link href="https://api.mapbox.com/mapbox.js/v2.2.2/mapbox.css" rel="stylesheet" />
-  <!-- <script src="mapbox-2.2.2.js"></script> -->
-  <!-- <link href="mapbox-2.2.2.css" rel="stylesheet" /> -->
   <style>
     * { box-sizing: border-box; }
     html, body { height: 100%; }
@@ -24,6 +22,6 @@
     <input id="file-input" type="file" />
   </div>
   <div id="map"></div>
-  <script src="bundle.js"></script>
+  <script src="public/bundle.min.js"></script>
 </body>
 </html>
