--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no" />
-  <title>Extract Exif and place the photo in the Map</title>
+  <title>Awesome Map</title>
   <script src="https://api.mapbox.com/mapbox.js/v2.2.2/mapbox.js"></script>
   <link href="https://api.mapbox.com/mapbox.js/v2.2.2/mapbox.css" rel="stylesheet" />
   <style>
