--- a/index.html
+++ b/index.html
@@ -6,22 +6,27 @@
   <title>Awesome Map</title>
   <script src="https://api.mapbox.com/mapbox.js/v2.2.2/mapbox.js"></script>
   <link href="https://api.mapbox.com/mapbox.js/v2.2.2/mapbox.css" rel="stylesheet" />
-  <style>
-    * { box-sizing: border-box; }
-    html, body { height: 100%; }
-    body { margin: 0; padding: 0; }
-    .input { display: block; padding: 1em; height: 71px; border-bottom: 1px solid #ccc; }
-    #map { display: block; width: 100%; height: calc(100% - 71px); }
-    .popup { text-align: center; }
-    .popup img { display: block; width: 100%; }
-  </style>
+  <link href="public/styles.css" rel="stylesheet" />
 </head>
 <body>
-  <div class="input">
-    Choose a image file with Geolocation Exif tags:<br/>
-    <input id="file-input" type="file" />
+  <div class="panels">
+    <div class="panel top">
+      <h1>Awesome Map</h1>
+    </div>
+    <div class="panel left">
+      <div id="map"></div>
+    </div>
+    <div class="panel right">
+      <div class="control">
+        <div class="input">
+          <label>
+            <p>Choose a image file with Geolocation Exif tags:</p>
+            <input id="file-input" type="file" multiple="multiple" accept="image/*" />
+          </label>
+        </div>
+      </div>
+    </div>
   </div>
-  <div id="map"></div>
   <script src="public/bundle.min.js"></script>
 </body>
 </html>
